<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingStart="@dimen/screen_padding"
    android:paddingEnd="@dimen/screen_padding"
    android:fillViewport="true"
    android:background="@color/colorPrimary"
    tools:context="com.acabezas.ehealth_patient_app.recover_password.RecoverPasswordActivity">

    <TextView
        android:id="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:text="@string/app_name_short"
        android:textColor="@color/colorAccent"
        android:textStyle="bold"
        android:textSize="@dimen/title_text_size"
        app:layout_constraintTop_toBottomOf="@+id/guideline_title"/>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/email"
        style="@style/TextLabel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/guideline">

        <EditText
            android:id="@+id/email_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_email"
            android:imeOptions="actionNext"
            android:inputType="textPersonName"
            android:lines="1"
            android:textColor="@color/colorAccent"
            android:backgroundTint="@color/colorAccent"
            android:drawablePadding="@dimen/drawable_padding"/>

    </android.support.design.widget.TextInputLayout>

    <TextView
        android:id="@+id/recover_password_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/item_margin_separator"
        android:text="@string/text_recover_password"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/email"
        android:textColor="@color/colorAccent"/>

    <Button
        android:id="@+id/recover_password"
        style="@style/AppTheme.ButtonBase"
        android:layout_marginTop="@dimen/item_margin_separator"
        android:text="@string/text_recover_password_button"
        app:layout_constraintTop_toBottomOf="@+id/recover_password_text" />

    <Button
        android:id="@+id/cancel"
        style="@style/AppTheme.ButtonBase"
        android:layout_marginTop="@dimen/item_margin_separator"
        android:text="@string/text_cancel_button"
        app:layout_constraintTop_toBottomOf="@+id/recover_password" />

    <android.support.constraint.Guideline
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/guideline"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.5"/>

    <android.support.constraint.Guideline
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/guideline_title"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.15"/>

</android.support.constraint.ConstraintLayout>
